main/crawl-index-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose convert -f docker-compose_k.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: crawl-index
  name: crawl-index
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: crawl-index
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose convert -f docker-compose_k.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/dsa-net: "true"
        io.kompose.service: crawl-index
    spec:
      containers:
        - env:
            - name: INDEX_API_URL
              value: http://es-index:8889
          image: docker.io/hunkim/crawl_index
          name: crawl-index-container
          resources: {}
      restartPolicy: Always
status: {}
