main/es-index-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: es-index
  name: es-index
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: es-index
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/dsa-net: "true"
        io.kompose.service: es-index
    spec:
      containers:
        - env:
            - name: ELASTIC_URL
              value: http://localhost:9200
            - name: EMB_API_URL
              value: http://emb-model-serv:8888/encode
          image: docker.io/hunkim/es_index
          name: es-index-container
          ports:
            - containerPort: 8889
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: es-index
  name: es-index
spec:
  ports:
    - name: "8889"
      port: 8889
      targetPort: 8889
  selector:
    io.kompose.service: es-index
status:
  loadBalancer: {}
